# notred

./: .pre-commit-config.yaml
notred-rs/: Cargo.toml  notes.md
notred-rs/data/: test1.json
notred-rs/flow-run/: Cargo.toml
notred-rs/flow-run/src/: main.rs
notred-rs/notred/: Cargo.toml
notred-rs/notred/src/: common.rs  errors.rs  flow.rs  flow_checker.rs  json_options_provider.rs  lib.rs  loader.rs  node_factory.rs  node_util.rs
notred-rs/notred/src/nodes/: append.rs  capture.rs  mod.rs  ticker.rs
notred-rs/src/: main.rs
runtime/: notes.md
runtime/data/: test1.json
runtime/flow-run/: Cargo.toml
runtime/flow-run/src/: exit.rs  main.rs
runtime/notred/: Cargo.toml
runtime/notred/src/: common.rs  conversion.rs  errors.rs  flow.rs  flow_checker.rs  lib.rs  loader.rs  message.rs  node.rs  node_factory.rs  node_util.rs
runtime/notred/src/nodes/: append.rs  capture.rs  mod.rs  terminate.rs  ticker.rs
