[package]
name = "flow-run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

notred = { path = "../notred" }
json = '*'
clap = {version = '3.0.10', features = ['cargo']}
env_logger = '0.9.0'
log = '0.4.14'
